--- a/joystick_embedded/platformio.ini
+++ b/joystick_embedded/platformio.ini
@@ -8,7 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = uno
+
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
+
+[env:esp32]
+board = esp32dev
+platform = espressif32
+framework = arduino
+upload_speed = 115200
+monitor_speed = 9600
+monitor_echo = yes
