feat(diff_robot_sim): update robot model geometry (now looks like a wheelchair)
Update also diff_drive parameters, add a new world with a ramp and plotjuggler config to realtime plotting

--- a/ros/diff_robot_sim/Dockerfile
+++ b/ros/diff_robot_sim/Dockerfile
@@ -4,7 +4,8 @@ RUN apt update && apt install -y \
     ros-humble-joint-state-publisher-gui \
     ros-humble-twist-mux \
     ros-humble-controller-manager \
-    ros-humble-gazebo-ros-pkgs
+    ros-humble-gazebo-ros-pkgs \
+    ros-humble-plotjuggler-ros
 
 WORKDIR /ros_ws
 
@@ -13,4 +14,4 @@ COPY diff_robot_sim/ src/diff_robot_sim/
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && \
     colcon build
 
-CMD ["/bin/bash", "-c", "source /ros_ws/install/setup.sh && ros2 launch diff_robot_sim launch_sim.launch.py"]
+CMD ["/bin/bash", "-c", "source /ros_ws/install/setup.sh && ros2 launch diff_robot_sim launch_sim.launch.py world:=/ros_ws/src/diff_robot_sim/worlds/ramp.world"]
