--- a/ros/arduino_driver/CMakeLists.txt
+++ b/ros/arduino_driver/CMakeLists.txt
@@ -21,6 +21,7 @@ ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(PROGRAMS
 src/driver.py
+src/control.py
 DESTINATION lib/${PROJECT_NAME}
 )
 
