--- a/ros/docker-compose.yml
+++ b/ros/docker-compose.yml
@@ -10,6 +10,16 @@ services:
       tty: true
       devices:
         - /dev/ttyUSB0
+      
+    arduino-motor:
+      image: ros-arduino-driver
+      container_name: arduino-motor
+      network_mode: host
+      ipc: host
+      tty: true
+      command: "/bin/bash -c 'source /ros_ws/install/setup.sh && source /ros_ws/src/arduino_driver/.venv/bin/activate && ros2 run arduino_driver control.py'"
+      depends_on:
+        - arduino-driver
 
     robot-sim:
       build:
@@ -27,3 +37,16 @@ services:
       depends_on: 
         - arduino-driver
 
+    robot-sim-plot:
+      image: ros-diff-robot-sim
+      container_name: diff-robot-sim-plot
+      environment:
+          - DISPLAY
+      volumes:
+          - /tmp/.X11-unix:/tmp/.X11-unix:rw
+      network_mode: host
+      ipc: host
+      tty: true
+      command: "/bin/bash -c 'source /ros_ws/install/setup.sh && ros2 run plotjuggler plotjuggler --layout /ros_ws/src/diff_robot_sim/config/plot_juggler_cfg.xml -n --start_streamer plot_juggler_cfg.xml'"
+      depends_on: 
+        - arduino-motor
