--- a/ros/diff_robot_sim/Dockerfile
+++ b/ros/diff_robot_sim/Dockerfile
@@ -14,4 +14,4 @@ COPY diff_robot_sim/ src/diff_robot_sim/
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && \
     colcon build
 
-CMD ["/bin/bash", "-c", "source /ros_ws/install/setup.sh && ros2 launch diff_robot_sim launch_sim.launch.py world:=/ros_ws/src/diff_robot_sim/worlds/ramp.world"]
+CMD ["/bin/bash"]
