--- a/ros/docker-compose.yml
+++ b/ros/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       network_mode: host
       ipc: host
       tty: true
+      command: "/bin/bash -c 'source /ros_ws/install/setup.sh && source /ros_ws/src/arduino_driver/.venv/bin/activate && ros2 run arduino_driver driver.py'"
       devices:
         - /dev/ttyUSB0
       
@@ -34,6 +35,7 @@ services:
       network_mode: host
       ipc: host
       tty: true
+      command: "/bin/bash -c 'source /ros_ws/install/setup.sh && ros2 launch diff_robot_sim launch_sim.launch.py world:=/ros_ws/src/diff_robot_sim/worlds/circuit.world'"
       depends_on: 
         - arduino-driver
 
